k8s/03-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: fileforge
spec:
  replicas: 1
  selector:
    matchLabels: { app: mongo }
  template:
    metadata:
      labels: { app: mongo }
    spec:
      containers:
        - name: mongo
          image: fileforge-mongo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-mongo-0
        - name: mongo-init
          configMap: { name: mongo-init-script }
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: fileforge
spec:
  clusterIP: None
  selector: { app: mongo }
  ports:
    - port: 27017
